<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@mipmap/left_filelist_bg">

        <LinearLayout
            android:id="@+id/rl_card_quart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <RelativeLayout
                android:id="@+id/card_quat"
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:padding="5dp"
                android:background="@drawable/btn_filelist_video_selector">
                <TextView
                    android:id="@+id/main_quart_tv"
                    style="@style/file_list_text_style"
                    android:text="@string/list_vide_quart" />
            </RelativeLayout>

            <ImageView style="@style/file_litt_divide_style" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_card_dual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <RelativeLayout
                android:id="@+id/card_dual"
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:padding="5dp"
                android:background="@drawable/btn_filelist_video_selector">
                <TextView
                    android:id="@+id/main_dual_tv"
                    style="@style/file_list_text_style"
                    android:text="@string/list_vide_quart" />
            </RelativeLayout>

            <ImageView style="@style/file_litt_divide_style" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_card_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/card_front"
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:padding="5dp"
                android:background="@drawable/btn_filelist_video_selector">
                <TextView
                    android:id="@+id/main_front_tv"
                    style="@style/file_list_text_style"
                    android:text="@string/list_video_front" />
            </RelativeLayout>

            <ImageView style="@style/file_litt_divide_style" />

            <LinearLayout
                android:id="@+id/rl_card_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/card_post"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:padding="5dp"
                    android:background="@drawable/btn_filelist_video_selector">
                    <TextView
                        style="@style/file_list_text_style"
                        android:text="@string/list_video_back" />
                </RelativeLayout>

                <ImageView style="@style/file_litt_divide_style" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_card_leftright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/card_left"
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:padding="5dp"
                android:background="@drawable/btn_filelist_video_selector">
                <TextView
                    style="@style/file_list_text_style"
                    android:text="@string/list_video_left" />
            </RelativeLayout>

            <ImageView style="@style/file_litt_divide_style" />

            <RelativeLayout
                android:id="@+id/card_right"
                android:layout_width="80dp"
                android:layout_height="110dp"
                android:padding="5dp"
                android:background="@drawable/btn_filelist_video_selector">
                <TextView
                    style="@style/file_list_text_style"
                    android:text="@string/list_video_right" />
            </RelativeLayout>

            <ImageView style="@style/file_litt_divide_style" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/card_photo"
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:padding="5dp"
            android:background="@drawable/btn_filelist_image_selector">
            <TextView
                style="@style/file_list_text_style"
                android:text="@string/list_image"
                android:paddingTop="60dp"/>
        </RelativeLayout>

        <ImageView style="@style/file_litt_divide_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="520dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_head"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <RelativeLayout
                android:id="@+id/title_file"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/bg_headnor_file">

                <Button
                    android:id="@+id/btn_videoFormat"
                    android:layout_width="@dimen/DIMEN_180PX"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_select_selector"
                    android:text="@string/video_format"
                    android:textColor="#87BDF5"
                    android:textSize="@dimen/record_file_window_font_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/video_manager"
                    android:textColor="#87BDF5"
                    android:textSize="@dimen/record_file_window_font_size" />

                <Button
                    android:id="@+id/btn_videoSelect"
                    android:layout_width="@dimen/DIMEN_180PX"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_select_selector"
                    android:text="@string/video_select"
                    android:textColor="#87BDF5"
                    android:textSize="@dimen/record_file_window_font_size"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/myActionBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@mipmap/bg_headnor_file">

                <Button
                    android:id="@+id/tv_all_selected"
                    android:layout_width="@dimen/DIMEN_180PX"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_select_selector"
                    android:text="@string/all_selected"
                    android:textColor="#87BDF5"
                    android:visibility="visible"
                    android:textSize="@dimen/record_file_window_font_size"/>
                <Button
                    android:id="@+id/tv_all_selected_no"
                    android:layout_width="@dimen/DIMEN_180PX"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_select_selector"
                    android:text="@string/all_selected_no"
                    android:textColor="#87BDF5"
                    android:textSize="@dimen/record_file_window_font_size"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="@dimen/DIMEN_180PX"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/checked"
                    android:textColor="#87BDF5"
                    android:textSize="@dimen/record_file_window_font_size" />

                <Button
                    android:id="@+id/tv_all_unselected"
                    android:layout_width="@dimen/DIMEN_180PX"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_select_selector"
                    android:text="@string/cancel"
                    android:textColor="#87BDF5"
                    android:textSize="@dimen/record_file_window_font_size"/>
            </RelativeLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
           <!-- <ListView
                android:id="@+id/file_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#B4EEB4"
                android:dividerHeight="1px"
                android:fadingEdge="none"
                />-->
            <com.github.jdsjlzx.recyclerview.LRecyclerView
                android:id="@+id/file_listview"
                android:layout_width="510dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:descendantFocusability="blocksDescendants"
                android:fadingEdge="none"></com.github.jdsjlzx.recyclerview.LRecyclerView>

            <ProgressBar
                android:id="@+id/progressbar"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_width="@dimen/DIMEN_50dp"
                android:layout_height="@dimen/DIMEN_50dp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/BLACK"
            android:visibility="gone"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="@dimen/DIMEN_3PX">

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_delete_selector"
                android:text="@string/delete"
                android:textColor="#87BDF5"
                android:textSize="@dimen/record_file_window_font_size" />
            <TextView
                android:id="@+id/record_bg_tv"
                android:background="@color/record_view_color"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                />
            <Button
                android:id="@+id/btn_lock"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_delete_selector"
                android:text="@string/lock"
                android:textColor="#87BDF5"
                android:textSize="@dimen/record_file_window_font_size"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>